3.18.2: Shift+Click (distance) and Ctrl+Shift+Click (location pickup) doesn’t work on GeoJSON areas Fixes #109

--- a/src/main.css
+++ b/src/main.css
@@ -343,3 +343,8 @@ input.is-invalid {
 .leaflet-pane.leaflet-geojson-pane {
     z-index: 399;
 }
+
+.hidden-leaflet-popup {
+    display: none;
+    visibility: hidden;
+}
